# cloudlydev

./: Cloudlyfile.yml  README.md  pyproject.toml  setup.py
lambdas/hello/: pyproject.toml
lambdas/hello/hello/: handler.py
lambdas/hello/hello/stuff/: doit.py
src/cloudlydev/: createtable.py  cron.py  dynamodb.py  main.py
src/cloudlydev/aws_mocks/: mocker.py
src/cloudlydev/aws_mocks/mocks/: cognito.py
