[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Nana Duah <gabano2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cloudly = {git = "https://github.com/nanaduah1/cloudly.git", rev = "1.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
